--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,29 @@
 {
   "compilerOptions": {
+    "incremental": true,
+    "target": "es2020",
+    "rootDir": ".",
+    "moduleResolution": "node",
+    "baseUrl": "./src/",
+    "paths": {
+      "@components": ["component/*"]
+    },
+    "noEmit": true,
+
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
-    "strict": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "module": "es6",
-    "target": "es5",
-    "jsx": "react",
+    "jsx": "preserve",
     "allowJs": true,
-    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-  }
+    "skipLibCheck": true,
+    "strict": true
+  },
+  "exclude": [
+    "./node_modules"
+  ]
 }
