--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,4 @@
 {
-    "root": true,
     "settings": {
         "react": {
             "version": "detect",
@@ -8,7 +7,8 @@
     },
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
     "extends": [
         "eslint:recommended",
@@ -16,7 +16,7 @@
         "plugin:@typescript-eslint/recommended",
         "airbnb",
         "airbnb-typescript",
-        "plugin: react-hooks/recommended",
+        "plugin:react-hooks/recommended",
         "plugin:import/recommended"
     ],
     "parser": "@typescript-eslint/parser",
@@ -30,7 +30,6 @@
     },
     "plugins": [
         "react",
-        "react-hooks",
         "@typescript-eslint"
     ],
     "rules": {
