--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/lodash": "^4.14.182",
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "eslint": "^8.14.0",
@@ -35,8 +35,10 @@
   "dependencies": {
     "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "^7.17.9",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "@types/react": "^17.0.43",
@@ -46,12 +48,14 @@
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.4",
+    "core-js": "^3.22.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "regenerator-runtime": "^0.13.9"
   }
 }
