--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
+    "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.24",
@@ -49,6 +50,7 @@
     "axios": "^0.27.2",
     "babel-loader": "^8.2.4",
     "core-js": "^3.22.4",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.1",
