--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
+    "@mui/system": "^5.8.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.11",
@@ -56,7 +57,6 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
-    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "regenerator-runtime": "^0.13.9"
   }
