--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "moduleResolution": "node",
     "baseUrl": "./src/",
     "paths": {
-      "@components": ["component/*"]
+      "@components/*": ["components/*"],
     },
     "noEmit": true,
     "outDir": "./dist/",
